--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "mocha": "^5.2.0",
     "mongoose": "^5.2.8",
     "morgan": "^1.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.3"
   }
 }
