--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "mocha": "^5.2.0",
     "mongoose": "^5.2.8",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "token": "^0.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
