updated env and added warning-on to style.css

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 
 # reference these in your code with process.env.SECRET
 
-JWT_SECRET=1superdupersecretstring
+JWT_SECRET="1superdupersecretstring"
 DATABASE_URL=mongodb://fitbuddy-user:fitbuddy-user1@ds223542.mlab.com:23542/fitbuddy-db
 
 # note: .env is a shell file so there can't be spaces around =
