Updated env and router.js

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@
 
 # reference these in your code with process.env.SECRET
 
+DATABASE_URL="mongodb://localhost/fitbuddy-db"
 JWT_SECRET="1superdupersecretstring"
 
 # note: .env is a shell file so there can't be spaces around =
