--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 
 # reference these in your code with process.env.SECRET
 
-DATABASE_URL="mongodb://localhost/fitbuddy-db"
+DATABASE_URL="mongodb://fitbuddy-user:fitbuddy-user1@ds223542.mlab.com:23542/fitbuddy-db"
 JWT_SECRET="1superdupersecretstring"
 
 # note: .env is a shell file so there can't be spaces around =
